# dispatch

./: CMakeLists.txt  CommandProcessor.cpp  CommandProcessor.h  ConfigManager.cpp  ConfigManager.h  LICENSE  README.md  WebhookPublisher.cpp  main.cpp  setup.sh  test.py
.github/workflows/: test.yml
src/: CommandProcessor.cpp  CommandProcessor.h  ConfigManager.cpp  ConfigManager.h  WebhookPublisher.cpp  WebhookPublisher.h
tests/: test_command_processor.cpp  test_config_manager.cpp  test_webhook_publisher.cpp
